--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -7,17 +7,27 @@
   	<dependency>
   		<groupId>com.sun.jersey</groupId>
   		<artifactId>jersey-server</artifactId>
-  		<version>1.14</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.sun.jersey</groupId>
-  		<artifactId>jersey-grizzly2</artifactId>
-  		<version>1.14</version>
+  		<version>1.7</version>
   	</dependency>
   	<dependency>
   		<groupId>org.freemarker</groupId>
   		<artifactId>freemarker</artifactId>
   		<version>2.3.14</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject</groupId>
+  		<artifactId>guice</artifactId>
+  		<version>3.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.eclipse.jetty</groupId>
+  		<artifactId>jetty-servlet</artifactId>
+  		<version>7.4.1.v20110513</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.sun.jersey.contribs</groupId>
+  		<artifactId>jersey-guice</artifactId>
+  		<version>1.7</version>
   	</dependency>
   </dependencies>
 </project>
