--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -29,5 +29,16 @@
   		<artifactId>jersey-guice</artifactId>
   		<version>1.7</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.almworks.sqlite4java</groupId>
+  		<artifactId>sqlite4java</artifactId>
+  		<version>0.282</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.almworks.sqlite4java</groupId>
+  		<artifactId>sqlite4java-win32-x64</artifactId>
+  		<type>dll</type>
+  		<version>0.282</version>
+  	</dependency>
   </dependencies>
 </project>
