--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -40,5 +40,10 @@
   		<type>dll</type>
   		<version>0.282</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-core</artifactId>
+  		<version>1.9.5-rc1</version>
+  	</dependency>
   </dependencies>
 </project>
