--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -3,6 +3,13 @@
   <groupId>net.kokkeli</groupId>
   <artifactId>lanplaylistserver</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>caprica</id>
+            <name>Caprica Software</name>
+            <url>http://www.capricasoftware.co.uk/repo</url>
+        </repository>
+    </repositories> 
   <dependencies>
   	<dependency>
   		<groupId>com.sun.jersey</groupId>
@@ -44,6 +51,11 @@
   		<groupId>org.mockito</groupId>
   		<artifactId>mockito-core</artifactId>
   		<version>1.9.5-rc1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>uk.co.caprica</groupId>
+  		<artifactId>vlcj</artifactId>
+  		<version>2.1.0</version>
   	</dependency>
   </dependencies>
 </project>
