--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -63,4 +63,16 @@
   		<version>1.16</version>
   	</dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
