--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -76,4 +76,7 @@
       </plugin>
     </plugins>
   </build>
+  <properties>
+  	<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
+  </properties>
 </project>
