Took junit from maven.

--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -62,6 +62,11 @@
   		<artifactId>jersey-multipart</artifactId>
   		<version>1.16</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  	</dependency>
   </dependencies>
   <build>
     <plugins>
