--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -79,19 +79,25 @@
           <target>1.7</target>
         </configuration>
       </plugin>
-      <plugin>
-      	<groupId>org.apache.maven.plugins</groupId>
-      	<artifactId>maven-jar-plugin</artifactId>
-      	<version>2.4</version>
+       <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
-          <archive>
+           <archive>
             <manifest>
-              <addClasspath>true</addClasspath>
               <mainClass>net.kokkeli.Program</mainClass>
             </manifest>
           </archive>
+            <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
         </configuration>
-      </plugin>
+            <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
     </plugins>
   </build>
   <properties>
