--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -79,6 +79,7 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
            <archive>
@@ -90,7 +91,7 @@
                 <descriptorRef>jar-with-dependencies</descriptorRef>
             </descriptorRefs>
         </configuration>
-            <executions>
+        <executions>
           <execution>
             <phase>package</phase>
             <goals>
@@ -98,6 +99,7 @@
             </goals>
           </execution>
         </executions>
+       </plugin>
     </plugins>
   </build>
   <properties>
