--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /LanPlaylistServer/target
 /LanPlaylistServer/db/database.db
 /LanPlaylistServer/tracks
+/LanPlaylistServer/lanplaylistserver-0.0.1-SNAPSHOT.jar
