--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -111,6 +111,15 @@
         </plugin>
     </plugins>
   </build>
+    <reporting>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <version>3.34</version>
+        </plugin>
+    </plugins>
+  </reporting>
   <properties>
   	<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
   </properties>
