--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -49,7 +49,7 @@
   	<dependency>
   		<groupId>uk.co.caprica</groupId>
   		<artifactId>vlcj</artifactId>
-  		<version>2.2.0</version>
+  		<version>2.4.1</version>
   	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
@@ -118,6 +118,9 @@
             <artifactId>maven-pmd-plugin</artifactId>
             <version>3.34</version>
         </plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>emma-maven-plugin</artifactId>
+        <version>0.5</version>
     </plugins>
   </reporting>
   <properties>
