--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -19,7 +19,7 @@
   	<dependency>
   		<groupId>org.freemarker</groupId>
   		<artifactId>freemarker</artifactId>
-  		<version>2.3.14</version>
+  		<version>2.3.20</version>
   	</dependency>
   	<dependency>
   		<groupId>com.google.inject</groupId>
@@ -71,6 +71,11 @@
   		<artifactId>jacoco-maven-plugin</artifactId>
   		<version>0.6.3.201306030806</version>
   		<type>maven-plugin</type>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.httpcomponents</groupId>
+  		<artifactId>httpclient</artifactId>
+  		<version>4.3.1</version>
   	</dependency>
   </dependencies>
   <build>
