--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -77,6 +77,11 @@
   		<artifactId>httpclient</artifactId>
   		<version>4.3.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.xerial</groupId>
+  		<artifactId>sqlite-jdbc</artifactId>
+  		<version>3.8.6</version>
+  	</dependency>
   </dependencies>
   <build>
     <plugins>
