--- a/LanPlaylistServer/pom.xml
+++ b/LanPlaylistServer/pom.xml
@@ -29,7 +29,7 @@
   	<dependency>
   		<groupId>org.eclipse.jetty</groupId>
   		<artifactId>jetty-servlet</artifactId>
-  		<version>7.4.1.v20110513</version>
+  		<version>9.3.0.M0</version>
   	</dependency>
   	<dependency>
   		<groupId>com.sun.jersey.contribs</groupId>
