Added testserver.db to ignore-list

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /LanPlaylistServer/db/database.db
 /LanPlaylistServer/tracks
 /LanPlaylistServer/lanplaylistserver-0.0.1-SNAPSHOT.jar
+/LanPlaylistServer/db/testserver.db
