--- a/PlayerService/package.json
+++ b/PlayerService/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified! Configure in package.json\" && exit 1"
   },
-  "repository": "",
+  "repository": { 
+      "type" : "git",
+      "url" : "https://github.com/Hekku2/k-lan-playlist-server.git"
+  },
   "keywords": [
     "lanplayer"
   ],
