--- a/UserService/package.json
+++ b/UserService/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
         "gulp": "^3.9.0",
-        "gulp-jshint": "^1.11.2"
+        "gulp-jshint": "^1.11.2",
+        "gulp-mocha": "^2.1.3"
   }
 }
