--- a/UserService/package.json
+++ b/UserService/package.json
@@ -4,7 +4,7 @@
   "description": "UserService",
   "main": "user-service.js",
   "scripts": {
-    "test": "echo \"Error: no test specified! Configure in package.json\" && exit 1"
+    "test": "jenkins-mocha test/*"
   },
   "repository": { 
       "type" : "git",
@@ -27,6 +27,7 @@
         "gulp": "^3.9.0",
         "gulp-jshint": "^1.11.2",
         "gulp-mocha": "^2.1.3",
-        "sinon": "^1.17.1"
+        "sinon": "^1.17.1",
+        "jenkins-mocha": "latest"
   }
 }
