--- a/PlayerService/package.json
+++ b/PlayerService/package.json
@@ -4,7 +4,7 @@
   "description": "PlayerService",
   "main": "player-service.js",
   "scripts": {
-    "test": "echo \"Error: no test specified! Configure in package.json\" && exit 1"
+    "test": "jenkins-mocha test/*"
   },
   "repository": { 
       "type" : "git",
@@ -18,11 +18,14 @@
   "readmeFilename": "README.md",
   "dependencies": {
         "express": "^4.13.3",
-        "vlc-control-node": "Hekku2/vlc-control-node",
-        "config": "^1.16.0"
+        "config": "^1.16.0",
+        "vlc-control-node": "Hekku2/vlc-control-node"
   },
   "devDependencies": {
         "gulp": "^3.9.0",
-        "gulp-jshint": "^1.11.2"
+        "gulp-jshint": "^1.11.2",
+        "gulp-mocha": "^2.1.3",
+        "sinon": "^1.17.1",
+        "jenkins-mocha": "latest"
   }
 }
