--- a/PlayerService/package.json
+++ b/PlayerService/package.json
@@ -2,7 +2,7 @@
   "name": "PlayerService",
   "version": "0.0.1",
   "description": "PlayerService",
-  "main": "player-service.js",
+  "main": "server.js",
   "scripts": {
     "test": "jenkins-mocha test/*"
   },
