--- a/UserService/package.json
+++ b/UserService/package.json
@@ -28,6 +28,7 @@
         "gulp-jshint": "^1.11.2",
         "gulp-mocha": "^2.1.3",
         "sinon": "^1.17.1",
-        "jenkins-mocha": "latest"
+        "jenkins-mocha": "latest",
+        "supertest": "latest"
   }
 }
