--- a/LanPlayerClientSide/package.json
+++ b/LanPlayerClientSide/package.json
@@ -4,7 +4,7 @@
   "description": "Client side HTML UI for Lan Player services",
   "main": "src/server.js",
   "scripts": {
-    "install": "bower install --config.interactive=false"
+    "install": "bower install --allow-root --config.interactive=false"
   },
   "repository": {
     "type" : "git",
