Added partial implementation for user updating.

--- a/UserService/package.json
+++ b/UserService/package.json
@@ -18,6 +18,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "express": "^4.13.3",
+    "body-parser": "^1.14.1",
     "config": "^1.16.0",
     "mysql": "^2.9.0",
     "sequelize": "^3.9.0",
