Added first implementation testing for unit tests

--- a/LanPlayerClientSide/bower.json
+++ b/LanPlayerClientSide/bower.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "angular": "~1.4.0",
     "angular-route": "~1.4.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "latest"
   }
 }
