--- a/LanPlayerClientSide/package.json
+++ b/LanPlayerClientSide/package.json
@@ -4,6 +4,14 @@
   "description": "Client side HTML UI for Lan Player services",
   "main": "src/server.js",
   "scripts": {
+    "pretest": "npm install",
+    "test": "karma start",
+    "test-single-run": "karma start  --single-run",
+
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor test/integration/protractor.conf.js"
   },
   "repository": {
     "type" : "git",
@@ -25,7 +33,8 @@
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
     "karma": "latest",
-    "karma-jasmine": "latest",
-    "karma-phantomjs-launcher": "latest"
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "protractor": "^2.5.1"
   }
 }
