--- a/LanPlayerClientSide/bower.json
+++ b/LanPlayerClientSide/bower.json
@@ -7,7 +7,9 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
-    "angular-route": "~1.4.0"
+    "angular-route": "~1.4.0",
+    "bootstrap": "~3.3.5",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "latest"
