--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "UserService"]
 	path = UserService
 	url = https://github.com/Hekku2/k-lan-playlist-user-service.git
+[submodule "PlayerService"]
+	path = PlayerService
+	url = https://github.com/Hekku2/k-lan-playlist-player-service.git
