Added LanPlayerClientSide as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "PlayerService"]
 	path = PlayerService
 	url = https://github.com/Hekku2/k-lan-playlist-player-service.git
+[submodule "LanPlayerClientSide"]
+	path = LanPlayerClientSide
+	url = https://github.com/Hekku2/k-lan-playlist-client-side.git
